@@ -28,7 +28,7 @@ sandbox.o: sandbox.c sandbox.h
 	$(CC) $(CFLAGS) -Wall -c sandbox.c
 
 sandbox_futils.o: sandbox_futils.c sandbox.h
-	$(CC) $(CFLAGS) -Wall -c sandbox_futils.c
+	$(CC) $(CFLAGS) -Wall -c -D_GNU_SOURCE -DPIC -fPIC -D_REENTRANT sandbox_futils.c
 
 libsandbox.so: libsandbox.o sandbox_futils.o canonicalize.o
 	$(LD) -shared -o libsandbox.so $^ -ldl -lc
@@ -49,7 +49,7 @@ install: all
 	install -d -m 0755 $(DESTDIR)/usr/lib/portage/lib
 	install -m 0755 libsandbox.so $(DESTDIR)/lib
 	install -m 0755 sandbox $(DESTDIR)/usr/lib/portage/bin
-	install -m 0755 sandbox.bashrc $(DESTDIR)/usr/lib/portage/lib
+	install -m 0644 sandbox.bashrc $(DESTDIR)/usr/lib/portage/lib
 
 
 clean:
