@@ -1,4 +1,9 @@
-/*
+/* 
+ * Copyright (C) 2002 Brad House <brad@mainstreetsoftworks.com>,
+ * Possibly based on code from Geert Bevin, Uwyn, http://www.uwyn.com
+ * Distributed under the terms of the GNU General Public License, v2 or later 
+ * Author: Brad House <brad@mainstreetsoftworks.com>
+ *    
  * $Header$
  */
 
